# spaosi-voice-translator

./: .gitignore  LICENSE  README.en.md  README.md  build_windows_exe.bat  main.py  pyproject.toml  settings.example.json
src/spaosi_voice_translator/app/: app_context.py  bootstrap.py  window_manager.py
src/spaosi_voice_translator/core/: app_icon.py  constants.py  i18n.py  log_localizer.py  logger.py  settings.py  signals.py
src/spaosi_voice_translator/services/audio/: devices.py  windows_audio.py
src/spaosi_voice_translator/services/hotkeys/: global_hotkey.py
src/spaosi_voice_translator/services/obs/: obs_server.py
src/spaosi_voice_translator/services/pipeline/: phrase_segmenter.py  transcription_controller.py
src/spaosi_voice_translator/services/speech/: deepgram_engine.py
src/spaosi_voice_translator/services/translation/: gemini_translator.py  prompts.py
src/spaosi_voice_translator/ui/layout/: geometry_manager.py
src/spaosi_voice_translator/ui/settings/: hotkey_capture_button.py  language_catalogs.py  settings_nav.py  settings_page.py  settings_rows.py
src/spaosi_voice_translator/ui/theme/: colors.py  styles.py  stylesheet.py
src/spaosi_voice_translator/ui/widgets/: audio_meter.py  auto_resizing_label.py  buttons.py  fields.py  log_view.py  status_dot.py  title_bar.py
src/spaosi_voice_translator/ui/windows/: base_overlay.py  game_overlay.py  language_selection_dialog.py  (+3 more)
tests/: test_gemini_translator.py  test_i18n.py  test_log_localizer.py  test_phrase_segmenter_unicode.py  test_settings_store.py  test_voice_prompt_transcription.py
