[project]
name = "spaosi-voice-translator-shell"
version = "0.3.0"
description = "Real-time desktop voice translator with OBS subtitle widget"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "soundcard>=0.4.3",
    "deepgram-sdk>=3.7,<4",
    "requests>=2.32",
    "certifi>=2024.2.2",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
